--- a/index.ejs
+++ b/index.ejs
@@ -264,7 +264,7 @@
 		<h1 class="page-title text-center">Portfolios</h1>
 		<div class="separator"></div>
 		<br>
-		<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas nulla suscipit <br class="hidden-sm hidden-xs"> unde rerum mollitia dolorum.</p>
+		<p class="lead text-center">Find out our best use cases below</p>
 		<div class="filters text-center">
 			<ul class="nav nav-pills">
 				<li class="active"><a href="#" data-filter="*">All</a></li>
@@ -351,38 +351,38 @@
 			<div class="col-md-8 col-md-offset-2">
 				<div class="owl-carousel content-slider-with-controls-bottom">
 					<div class="testimonial margin-clear clearfix">
-						<h2 class="title">CEO</h2>
+                        <h2 class="title">Amazing!</h2>
 						<div class="testimonial-image">
-							<img src="/images/testimonial-1.jpg" alt="Johnathan Stevens" title="Johnathan Stevens" class="img-circle">
+							<img src="/images/Robert.jpg" alt="Robert Padbury" title="Robert Padbury" class="img-circle">
 						</div>
 						<div class="testimonial-body">
-							<p>Sed ut perspiciatis unde omnis iste natu error sit voluptatem accusan tium dolore laud antium,  totam rem dolor sit amet tristique pulvinar, turpis arcu rutrum nunc, ac laoreet turpis augue a justo.</p>
-							<div class="testimonial-info-1">- Johnathan Stevens</div>
-							<div class="testimonial-info-2">By Etherant, LLC</div>
+							<p>The services provided by this company are unparalleled. We received over 100 designs for a very competitive price. The designer are top tier and know how to turn your ideas into a reality.</p>
+							<div class="testimonial-info-1">- Robert Padbury</div>
+							<div class="testimonial-info-2">Senior Manager</div>
 						</div>
 						<hr class="clear">
 					</div>
 					<div class="testimonial margin-clear clearfix">
 						<h2 class="title">Great!</h2>
 						<div class="testimonial-image">
-							<img src="/images/testimonial-2.jpg" alt="Johnathan Stevens" title="Johnathan Stevens" class="img-circle">
+							<img src="/images/Titus.jpg" alt="Titus Smith" title="Titus Smith" class="img-circle">
 						</div>
 						<div class="testimonial-body">
-							<p>Turpis arcu rutrum nunc, ac laoreet turpis augue a justo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, esse, animi maxime voluptate tempore at sunt labore incidunt nulla dignissimos iusto ad similique inventore distinctio quam repellendus itaque minus minima.</p>
-							<div class="testimonial-info-1">- John Doe</div>
-							<div class="testimonial-info-2">By Company</div>
+							<p>The quality and response speed of a Eterant services is truly remarkable. We will definitely be using you guys again!</p>
+							<div class="testimonial-info-1">- Titus Smith</div>
+							<div class="testimonial-info-2">CTO</div>
 						</div>
 						<hr class="clear">
 					</div>
 					<div class="testimonial margin-clear clearfix">
-						<h2 class="title">Amazing!</h2>
+						<h2 class="title">Wonderful!</h2>
 						<div class="testimonial-image">
-							<img src="/images/testimonial-3.jpg" alt="Jane Doe" title="Jane Doe" class="img-circle">
+							<img src="/images/Martin.png" alt="Martin Karasek" title="Martin Karasek" class="img-circle">
 						</div>
 						<div class="testimonial-body">
-							<p>Phosfluorescently e-enable adaptive synergy for strategic quality vectors. Continually transform fully tested expertise with competitive technologies ac laoreet turpis augue a justo.</p>
-							<div class="testimonial-info-1">- John Doe</div>
-							<div class="testimonial-info-2">By Company</div>
+							<p>Thanks to Eterant, I was able to become freelancer [with] 3-4 work enquiries every week. I have never been happier in my career life. With Eterant I not only get a lot of work, but also a huge motivation to showcase my work.</p>
+							<div class="testimonial-info-1">- Martin Karasek</div>
+							<div class="testimonial-info-2">Freelancer</div>
 						</div>
 						<hr class="clear">
 					</div>
@@ -393,37 +393,47 @@
 	<br>
 </div>
 
-<div class="section light-gray-bg footer-top clearfix">
+<div class="section light-gray-bg footer-top clearfix light">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
+		<div class="row" style="margin-bottom: 2rem;">
+            <h2>Trusted by over 30,000 of the world’s leading companies</h2>
+			<div class="col-md-10">
 				<div class="owl-carousel clients">
+                    <div class="client">
+                        <img src="/images/airbnb.png" alt="" style="width: 75px; height: auto; opacity: 0.5;">
+                    </div>
+                    <div class="client">
+                        <img src="/images/shopify.png" alt="" style="width: 75px; height: auto; opacity: 0.5;">
+                    </div>
 					<div class="client">
-						<a href="#"><img src="/images/client-1.png" alt=""></a>
+						<img src="/images/client-1.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-2.png" alt=""></a>
+                            <img src="/images/client-2.png" alt="">
+                    </div>
+					<div class="client">
+                            <img src="/images/client-3.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-3.png" alt=""></a>
+                            <img src="/images/client-4.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-4.png" alt=""></a>
+                            <img src="/images/client-5.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-5.png" alt=""></a>
+                            <img src="/images/client-6.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-6.png" alt=""></a>
+                            <img src="/images/client-7.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-7.png" alt=""></a>
+                            <img src="/images/client-8.png" alt="">
 					</div>
-					<div class="client">
-						<a href="#"><img src="/images/client-8.png" alt=""></a>
-					</div>
+					
 				</div>
-			</div>
+            </div>
+        </div>
+        <div class="row">
 			<div class="col-md-6">
 				<blockquote class="inline">
 					<p class="margin-clear">Design is not just what it looks like and feels like. Design is how it works.</p>	
