--- a/index.ejs
+++ b/index.ejs
@@ -46,7 +46,7 @@
 						data-splitin="chars"
 						data-elementdelay="0.07"
 						data-endelementdelay="0.1"
-						data-splitout="chars">We Love to Code
+						data-splitout="chars">Great software is built by great teams
 					</div>
 
 					<div class="tp-caption sfr small_thin_white text-center tp-resizeme"
@@ -55,7 +55,7 @@
 						data-speed="600"
 						data-start="0"
 						data-end="10000"
-						data-endspeed="600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Quia dolorum consectetur doloremque a aliquam ullam labore, ducimus adipisci iste animi <br> natus asperiores sequi assumenda minima blanditiis. Culpa quis consectetur ratione. 
+						data-endspeed="600">We help build and manage a team of world-class <br> developers to bring your vision to life 
 					</div>
 
 					<div class="tp-caption sft"
@@ -91,7 +91,7 @@
 						data-splitin="chars"
 						data-elementdelay="0.07"
 						data-endelementdelay="0.1"
-						data-splitout="chars">Boost Your Online Presence
+						data-splitout="chars">Stable, Secure, and scalable code starts here
 					</div>
 
 					<div class="tp-caption sfr small_thin_dark text-center tp-resizeme"
@@ -100,7 +100,7 @@
 						data-speed="600"
 						data-start="0"
 						data-end="10000"
-						data-endspeed="600">Quia dolorum consectetur doloremque a aliquam ullam labore, ducimus adipisci iste animi <br> natus asperiores sequi assumenda minima blanditiis. Culpa quis consectetur ratione.
+						data-endspeed="600">We specialize in designing, building, and maintaining custom-made websites and apps. <br>Whether you desire to have professional looking services, Eterant is here to help.
 					</div>
 
 					<div class="tp-caption light_medium_20 sft"
@@ -246,17 +246,109 @@
 		</div>
 	</div>
 
-	<div class="full-width-section">
-		<div class="full-text-container left">
-			<h1>Impress your clients</h1>
-			<div class="separator-2 right"></div>
-			<p class="lead">Creating beautiful digital products engineered to drive growth for the world’s leading brands.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi veniam, veritatis sint consequuntur! Natus, culpa, explicabo! Non quo laboriosam nobis quia, amet excepturi optio dolor impedit. Perferendis libero unde, nulla deserunt sequi. Voluptatum, officia suscipit porro reprehenderit vitae quo rem reiciendis, a vero quae. Vero beatae voluptatum.</p>
-		</div>
-		<div class="full-image-container">
-			<img class="center-block" src="/images/impressyour.jpg" alt="">
-		</div>
-	</div>
+    <div class="home-service-wrapper" style="overflow: hidden;">
+        <div class="home-service-list-wrap">
+            <div class="home-service-list">
+                <div class="single-service-wrap">
+                    <div class="service-single very-light-pink sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/CustomSoftwareDevelopment.svg"
+                                title="Custom Software Development Services"></div>
+                        <div class="service-content-blk">
+                            <h4><a href="/custom-software-development">Custom Software Development Services</a></h4>
+                            <p>Solve your unique business challenges by <strong>building custom applications.</strong></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-service-wrap">
+                    <div class="service-single off-white sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/ApplicationDevelopmentServices.svg"
+                                title="Application Development Services"></div>
+                        <div class="service-content-blk">
+                            <h4><a href="/application-development">Application Development Services</a></h4>
+                            <p>Improve your <strong>time to market</strong> and quality with our app development services.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-service-wrap">
+                    <div class="service-single pale sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/SoftwareTesting.svg" title="Software Testing Services"></div>
+                        <div class="service-content-blk">
+                            <h4><a href="/software-testing">Software Testing <br>Services</a></h4>
+                            <p>Confidently deliver software faster with our <strong>robust QA processes.</strong></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-service-wrap">
+                    <div class="service-single sky-blue sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/snatural-language-processing.svg"
+                                title="Hire Dedicated Developers"></div>
+                        <div class="service-content-blk">
+                            <h4><a href="/artificial-intelligence-services">AI/ML Development <br> Services </a></h4>
+                            <p> Use machine learning to build intelligent <strong>AI-driven apps</strong> </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-service-wrap">
+                    <div class="service-single pale-grey sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/Enterprisemobile.svg" title="Mobile application"></div>
+                        <div class="service-content-blk">
+                            <h4><a href="/mobile-apps">Mobile Application<br>Development</a></h4>
+                            <p><strong>B2B and B2C</strong> mobile apps for organizations ready to adopt a mobile-first world.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-service-wrap">
+                    <div class="service-single ice sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/Dedicatedsoftware.svg" title="Dedicated software development">
+                        </div>
+                        <div class="service-content-blk">
+                            <h4><a href="/dedicated-development-team">Dedicated Software Development Team</a></h4>
+                            <p>Expand your <strong>development capacity</strong> without any operational overhead.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-service-wrap">
+                    <div class="service-single very-light-pink-two sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/APIintegrationServices.svg" title="API integration Services">
+                        </div>
+                        <div class="service-content-blk">
+                            <h4><a href="/api-integration-development">API Integration &amp; Development Services</a></h4>
+                            <p><strong>Cut down development time</strong> and costs by Integrating APIs and Systems.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-service-wrap">
+                    <div class="service-single ice-blue sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/web-app-development.svg" title="Web App Development"></div>
+                        <div class="service-content-blk">
+                            <h4><a href="/web-apps-development">Web Application Development Services</a></h4>
+                            <p>Build <strong>enterprise-grade web apps</strong> that power mission-critical workflows.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-service-wrap">
+                    <div class="service-single pale-lavender sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/ProductDevelopmentServices.svg"
+                                title="Product development services"></div>
+                        <div class="service-content-blk">
+                            <h4><a href="/software-product-development">Software Product Development Services</a></h4>
+                            <p>Shape and <strong>validate your vision</strong> by working with our product experts.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="single-service-wrap">
+                    <div class="service-single very-light-pink-three sc-18exhag-0 hhEtMd">
+                        <div class="service-img-blk"><img src="/images/HireDedicatedDeveloper.svg" title="Hire Dedicated Developers">
+                        </div>
+                        <div class="service-content-blk">
+                            <h4><a href="/hire-dedicated-developers">Hire Dedicated <br>Developers</a></h4>
+                            <p><strong>Top programmers</strong> on your time and terms with guaranteed results.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="margin-clear space-top clearfix object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="300">
 
@@ -396,7 +488,7 @@
 <div class="section light-gray-bg footer-top clearfix light">
 	<div class="container">
 		<div class="row" style="margin-bottom: 2rem;">
-            <h2>Trusted by over 30,000 of the world’s leading companies</h2>
+            <h2 style="padding-left: 1rem; padding-right: 1rem;">Trusted by over 30,000 of the world’s leading companies</h2>
 			<div class="col-md-10">
 				<div class="owl-carousel clients">
                     <div class="client">
@@ -451,8 +543,6 @@
         <div class="col-sm-6">
           <div class="footer-content" id="contactus">
             <h2>Contact Us</h2>
-            <p>Veritatis officiis ullam libero quam aliquam, tenetur dolor incidunt praesentium dolorum laborum tempora suscipit quo sapiente?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. possimus laborum. Accusantium, itaque.</p>
             <div class="row">
               <div class="col-md-6">
                 <ul class="list-icons">
