--- a/portfolio/index.ejs
+++ b/portfolio/index.ejs
@@ -170,37 +170,47 @@
 
 <!-- section start -->
 <!-- ================ -->
-<div class="section gray-bg text-muted footer-top clearfix">
+<div class="section light-gray-bg footer-top clearfix light">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
+		<div class="row" style="margin-bottom: 2rem;">
+			<h2>Trusted by over 30,000 of the world’s leading companies</h2>
+			<div class="col-md-10">
 				<div class="owl-carousel clients">
 					<div class="client">
-						<a href="#"><img src="/images/client-1.png" alt=""></a>
+						<img src="/images/airbnb.png" alt="" style="width: 75px; height: auto; opacity: 0.5;">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-2.png" alt=""></a>
+						<img src="/images/shopify.png" alt="" style="width: 75px; height: auto; opacity: 0.5;">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-3.png" alt=""></a>
+						<img src="/images/client-1.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-4.png" alt=""></a>
+							<img src="/images/client-2.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-5.png" alt=""></a>
+							<img src="/images/client-3.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="/images/client-6.png" alt=""></a>
+							<img src="/images/client-4.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="images/client-7.png" alt=""></a>
+							<img src="/images/client-5.png" alt="">
 					</div>
 					<div class="client">
-						<a href="#"><img src="images/client-8.png" alt=""></a>
+							<img src="/images/client-6.png" alt="">
 					</div>
+					<div class="client">
+							<img src="/images/client-7.png" alt="">
+					</div>
+					<div class="client">
+							<img src="/images/client-8.png" alt="">
+					</div>
+					
 				</div>
 			</div>
+		</div>
+		<div class="row">
 			<div class="col-md-6">
 				<blockquote class="inline">
 					<p class="margin-clear">Design is not just what it looks like and feels like. Design is how it works.</p>	
