--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -86,3 +86,276 @@ File Description: Place here your custom CSS styles
     font-size: 1.8rem;
     font-weight: bold;
 }
+
+.single-service-wrap {
+    position: relative;
+}
+
+.home-service-list-wrap .home-service-list {
+    -webkit-box-align: stretch;
+    align-items: stretch;
+    display: flex;
+    padding: 40px 0px 80px calc((100vw - 1140px) / 2);
+    padding-top: 40px;
+    padding-right: 0px;
+    padding-bottom: 80px;
+    padding-left: calc((100vw - 1140px) / 2);
+}
+
+.home-service-list-wrap .home-service-list .single-service-wrap:nth-child(2n) {
+    top: 30px;
+}
+
+.home-service-list-wrap .home-service-list .single-service-wrap .service-single {
+    height: 100%;
+    min-width: 354px;
+    position: relative;
+    margin: 0px 18px;
+    padding: 20px 18px 22px;
+}
+
+@media (max-height: 850px) and (max-width: 1441px) and (min-width: 1200px) {
+    .home-service-list-wrap .home-service-list .single-service-wrap .service-single {
+        margin: 0px 19px;
+        padding: 18px 18px 20px;
+    }
+}
+
+@media (max-width: 767px) {
+    .home-service-list-wrap .home-service-list .single-service-wrap .service-single {
+        margin: 0px 15px;
+        padding: 20px 18px;
+    }
+}
+
+@media (max-width: 479px) {
+    .home-service-list-wrap .home-service-list .single-service-wrap .service-single {
+        min-width: 280px;
+        margin: 0px 12px;
+        padding: 17px;
+    }
+}
+
+.hhEtMd.very-light-pink-two {
+    border-color: rgb(220, 220, 220);
+}
+
+@media (max-width: 767px)
+{
+    .home-service-list-wrap .home-service-list .single-service-wrap .service-single {
+        margin: 0px 15px;
+        padding: 20px 18px;
+    }
+}
+
+@media (max-width: 479px)
+{
+    .home-service-list-wrap .home-service-list .single-service-wrap .service-single {
+        min-width: 280px;
+        margin: 0px 12px;
+        padding: 17px;
+    }
+}
+
+.hhEtMd {
+    max-width: 354px;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.06) 0px 1px 18px 0px, rgba(0, 0, 0, 0.1) 0px 3px 5px -1px;
+    padding: 21px 24px 23px;
+    transition: all 800ms cubic-bezier(0.2, 0.8, 0.2, 1) 0s;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(255, 255, 255);
+    border-image: initial;
+}
+
+@media (max-height: 850px) and (max-width: 1441px) and (min-width: 1200px)
+    {
+        .hhEtMd {
+        max-width: 310px;
+        padding: 18px 21px 20px;
+    }
+}
+
+.hhEtMd.off-white {
+    border-color: rgb(231, 228, 187);
+}
+
+.hhEtMd.off-white:hover {
+    background-color: rgb(255, 253, 230);
+}
+
+@media (max-width: 1024px)
+{
+    .hhEtMd:hover {
+        box-shadow: rgba(0, 0, 0, 0.06) 0px 1px 18px 0px, rgba(0, 0, 0, 0.1) 0px 3px 5px -1px;
+        transform: initial;
+    }
+}
+
+.hhEtMd:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 11px 15px -3px, rgba(0, 0, 0, 0.04) 0px 9px 30px 3px, rgba(0, 0, 0, 0.04) 0px 20px 30px 3px;
+    transform: translateY(-5px);
+}
+
+.hhEtMd.off-white {
+    border-color: rgb(231, 228, 187);
+}
+
+.hhEtMd.sky-blue:hover {
+    background-color: rgb(221, 240, 255);
+}
+
+@media (max-width: 1024px)
+{    
+    .hhEtMd:hover {
+        box-shadow: rgba(0, 0, 0, 0.06) 0px 1px 18px 0px, rgba(0, 0, 0, 0.1) 0px 3px 5px -1px;
+        transform: initial;
+    }
+}
+
+.hhEtMd:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 11px 15px -3px, rgba(0, 0, 0, 0.04) 0px 9px 30px 3px, rgba(0, 0, 0, 0.04) 0px 20px 30px 3px;
+    transform: translateY(-5px);
+}
+
+.hhEtMd.sky-blue {
+    border-color: rgb(184, 223, 253);
+}
+
+.hhEtMd .service-content-blk {
+    flex: 1 1 0%;
+}
+
+.hhEtMd .service-content-blk h4 {
+    font-size: 18px;
+    font-family: Graphik;
+    margin-bottom: 7px;
+    line-height: 24px;
+    transition: all 800ms cubic-bezier(0.2, 0.8, 0.2, 1) 0s;
+}
+
+.hhEtMd.pale {
+    border-color: rgb(234, 216, 178);
+}
+
+.hhEtMd.pale:hover {
+    background-color: rgb(255, 244, 220);
+}
+
+.hhEtMd.very-light-pink-two:hover {
+    background-color: rgb(241, 241, 241);
+}
+
+.hhEtMd.very-light-pink-two {
+    border-color: rgb(220, 220, 220);
+}
+
+.hhEtMd.ice:hover {
+    background-color: rgb(229, 255, 233);
+}
+
+.hhEtMd.ice {
+    border-color: rgb(182, 231, 189);
+}
+
+.hhEtMd.very-light-pink-three {
+    border-color: rgb(243, 204, 204);
+}
+
+.hhEtMd.very-light-pink-three:hover {
+    background-color: rgb(255, 239, 239);
+}
+
+.hhEtMd .service-content-blk p {
+    font-size: 17px;
+    line-height: 23px;
+    margin: 0px;
+    transition: all 800ms cubic-bezier(0.2, 0.8, 0.2, 1) 0s;
+}
+
+@media (max-width: 479px)
+   { 
+       .home-service-list-wrap .home-service-list .single-service-wrap .service-single .service-img-blk {
+            position: absolute;
+            top: 17px;
+            left: 17px;
+            margin: 0px;
+        }
+}
+
+@media (max-width: 767px)
+{
+    .home-service-list-wrap .home-service-list .single-service-wrap .service-single .service-img-blk {
+        margin-right: 16px;
+    }
+}
+
+.home-service-list-wrap .home-service-list .single-service-wrap .service-single .service-img-blk {
+    margin-right: 18px;
+}
+
+@media (max-width: 479px)
+{
+    .hhEtMd .service-img-blk {
+        margin-bottom: 15px;
+    }
+}
+.hhEtMd .service-img-blk {
+    width: 50px;
+    height: 50px;
+    margin-right: 16px;
+    border-radius: 50%;
+    transition: all 800ms cubic-bezier(0.2, 0.8, 0.2, 1) 0s;
+}
+
+.hhEtMd.very-light-pink:hover {
+    background-color: rgb(255, 244, 237);
+}
+
+.hhEtMd:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 11px 15px -3px, rgba(0, 0, 0, 0.04) 0px 9px 30px 3px, rgba(0, 0, 0, 0.04) 0px 20px 30px 3px;
+    transform: translateY(-5px);
+}
+
+.hhEtMd.very-light-pink {
+    border-color: rgb(252, 217, 195);
+}
+
+.hhEtMd:hover .service-content-blk h4 {
+    transform: translateY(-7px);
+}
+
+@media (max-width: 479px)
+{    
+    .home-service-list-wrap .home-service-list .single-service-wrap .service-single .service-content-blk h4 {
+        min-height: 50px;
+        padding-left: 62px;
+    }
+}
+
+@media (max-width: 767px)
+{
+    .hhEtMd .service-content-blk h4 {
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 1024px)
+{    
+    .hhEtMd:hover .service-content-blk h4 {
+        box-shadow: initial;
+        transform: initial;
+    }
+}
+
+.hhEtMd .service-content-blk h4 {
+    font-size: 18px;
+    font-family: Graphik;
+    margin-bottom: 7px;
+    line-height: 24px;
+    transition: all 800ms cubic-bezier(0.2, 0.8, 0.2, 1) 0s;
+}
